--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Sacred Sikkim",
-    "slug": "Sacred Sikkim",
+    "slug": "sacred-sikkim",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -16,9 +16,22 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d04d49d6-16c3-4eec-b505-f9665b1f7374"
+      }
+    },
+    "android": {
+      "package": "com.ashhhh1535.sacredsikkim"
     }
   }
 }
