--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "sacredSikkim",
+    "scheme": "sacredsikkim",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -18,6 +18,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-maps",
       "expo-font",
       "expo-web-browser"
     ],
