--- a/app.json
+++ b/app.json
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ashhhh1535.sacredsikkim",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs access to your location to show nearby monasteries."
+      }
     },
     "web": {
       "bundler": "metro",
@@ -18,6 +22,13 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "This app needs access to your location to show nearby monasteries.",
+          "locationWhenInUsePermission": "This app needs access to your location to show nearby monasteries."
+        }
+      ],
       "expo-maps",
       "expo-font",
       "expo-web-browser"
@@ -26,13 +37,14 @@
       "typedRoutes": true
     },
     "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "d04d49d6-16c3-4eec-b505-f9665b1f7374"
-      }
+      "router": {}
     },
     "android": {
-      "package": "com.ashhhh1535.sacredsikkim"
+      "package": "com.ashhhh1535.sacredsikkim",
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "INTERNET"
+      ]
     }
   }
 }
