--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build": "expo build",
-    "eject": "expo eject"
+    "setup": "cp .env.example .env && echo 'Please edit .env file with your API keys'"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "7.3.10",
     "@react-navigation/native": "7.1.6",
     "@react-navigation/native-stack": "7.3.10",
     "@supabase/supabase-js": "^2.57.3",
+    "dotenv": "^17.2.2",
     "expo": "53.0.22",
     "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.3",
