--- a/package.json
+++ b/package.json
@@ -12,46 +12,48 @@
     "setup": "cp .env.example .env && echo 'Please edit .env file with your API keys'"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/bottom-tabs": "7.3.10",
-    "@react-navigation/native": "7.1.6",
-    "@react-navigation/native-stack": "7.3.10",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "^2.11.2",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.57.3",
     "dotenv": "^17.2.2",
-    "expo": "53.0.22",
-    "expo-blur": "~14.1.3",
-    "expo-constants": "~17.1.3",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.3",
-    "expo-linear-gradient": "~14.1.3",
-    "expo-linking": "~7.1.7",
-    "expo-location": "^18.1.6",
-    "expo-maps": "~0.11.0",
-    "expo-router": "~5.1.6",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.1",
+    "expo-blur": "~15.0.6",
+    "expo-constants": "~18.0.8",
+    "expo-font": "~14.0.7",
+    "expo-haptics": "~15.0.6",
+    "expo-linear-gradient": "~15.0.6",
+    "expo-linking": "~8.0.7",
+    "expo-location": "~19.0.6",
+    "expo-maps": "~0.12.6",
+    "expo-router": "~6.0.0",
+    "expo-splash-screen": "~31.0.8",
+    "expo-status-bar": "~3.0.7",
+    "expo-symbols": "~1.0.6",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.6",
     "i18next": "^25.5.2",
     "lucide-react-native": "^0.475.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
-    "react-native": "^0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   }
 }
