--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "expo-speech": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
