--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-location": "^18.1.6",
     "expo-maps": "~0.11.0",
     "expo-router": "~5.1.6",
+    "expo-speech": "~13.1.7",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.3",
@@ -44,6 +45,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -51,8 +53,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
-    "uuid": "^13.0.0",
-    "expo-speech": "~13.1.7"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
