--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.1.3",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.3",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
